testdata/baselines/reference/submodule/conformance/paramTagTypeResolution.errors.txt
first.js(5,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== main.js (0 errors) ====
    var f = require('./first');
    f(1, n => { })
    
==== first.js (1 errors) ====
    /** @template T
     * @param {T} x
     * @param {(t: T) => void} k
     */
    module.exports = function (x, k) { return k(x) }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    